# rusty_order_service

./: Cargo.toml
src/: adapters.rs  domain.rs  main.rs  ports.rs
src/adapters/: service.rs  storage.rs
src/adapters/http/: handlers.rs
src/adapters/http/handlers/: confirm.rs  create.rs  utils.rs
src/adapters/storage/: memory.rs  model.rs
src/domain/: errors.rs  models.rs
src/domain/models/: item.rs  line_item.rs  order.rs
src/ports/: repository.rs  service.rs
