[package]
name = "rusty_order_service"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }
